@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install prepare test
-DEPEND=sci-biology/samtools dev-libs/boost !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
+DEPEND=>=sci-biology/samtools-0.1.18 dev-libs/boost:= !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
 DESCRIPTION=Transcript assembly, differential expression, and differential regulation for RNA-Seq
-EAPI=4
+EAPI=5
 HOMEPAGE=http://cufflinks.cbcb.umd.edu/
 IUSE=debug
 KEYWORDS=~amd64 ~x86
 LICENSE=Artistic
-RDEPEND=sci-biology/samtools dev-libs/boost
+RDEPEND=>=sci-biology/samtools-0.1.18 dev-libs/boost:=
 SLOT=0
 SRC_URI=http://cufflinks.cbcb.umd.edu/downloads/cufflinks-1.3.0.tar.gz
 _eclasses_=autotools	d76ee21296238133bd2df8dea7f33a05	autotools-utils	559ed17194292ec42d68145dcca2fa32	eutils	40081e8c7e7f7c4f9db349a1d6d52925	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=9c9db38aa4834b2d39702c5c30673aa9
+_md5_=58d9ed4edbab30b29168862cc76a4e75
