@@ -1,17 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX cufflinks-1.3.0-autotools.patch 1168 SHA256 a4d8f9d83ca34953918351fd6808508cb58e5c47830fb536e964341a1efdd8fe SHA512 8c56db11ad168a1f7253f86093821fb5e6399c1b4872375eed76b7bc0859e0064efe4157fc3a311c575abbe728571f46fb5a1fe81ae5cbb2e435013dadeaaa36 WHIRLPOOL 6e506be3eb57e00eb4b6c120ba7a1d4a164f2c11573506c332a26ddcf1a203a31fac138c614ebd620212fad3ac4d51b2a9c66d28c13664b5c2f5ce9946a8c86b
+AUX cufflinks-1.3.0-autotools.patch 1270 SHA256 457741f6707097b6baa004c09995526a06553d75ed0018f0ef239001ab9963ff SHA512 2b9efa463f808e1433674f5c351d5e3fb30db7516d3b4fdf4f9d18d010d64a937b227d9271ece581b8f3240cd156f27972ad1073f07ee1761444c2e2681a9d83 WHIRLPOOL 6c02e73bdd41c117ead6252da374811ccb23658a7f3b6fac2abcee0cc189df4f5b1a3106906ddd462c053ddda02f7b41c7b73a985417f6d8db53afc6a29c158c
 AUX cufflinks-1.3.0-boost.patch 52005 SHA256 4fc98a82bb1b283db0eb0b4064ac76237ddd1f5c329d76a4130ec09d7dc7983b SHA512 910c9d1b9b1635a4b3e30b0d377b1f2c192a20e482697da0346a9ecb99e0255ac50c906ff7be2d94446137ed04cfa7705c916dc892e1fc0c5c05c93e950e1d34 WHIRLPOOL a5fc395daccbf248fe819b1c21979fbd0f6168c7227d4774240fa70d58eb75dd479eb418bd181c5c470209f72d52c7913d0dea77d1b6d16716543841bd5a5984
 AUX cufflinks-1.3.0-gcc-4.7.patch 594 SHA256 9dcdde0e56b3ebb3f0325eaba05b0c8f80cab311519d3785956e32bb1c4e0b97 SHA512 fc8b3924af1f24cc57e5890bb22acc1123eb1704948ded6bdf2beb7500ccbe57c12ff3905c235f3ae47dfff19e4205ed266b94a6eef48ce1539cd2c260e37ac6 WHIRLPOOL 196255a59028cadfa6d0575230bb9f602c894db437b34e1f9efb573dbe5d9bdc9bc3f9ed573166aa9fbb070d7d506a447627369bb71d72040d1ab28b358c46fc
 DIST cufflinks-1.3.0.tar.gz 676660 SHA256 c1e194e30e6ba2e1cbbd35e5f92be59f9fdef95a12079b3141790efbbdbdfd86 SHA512 b493c06b00093958aa3bf4aefa6435b89aa3fa8f90b9adea955b38aaa0301fafe3f028321573855d2af9515f9792a8a9c3851bd9352846131658e54b5a6ac68a WHIRLPOOL 649ed7638bdc655cc38d9c0ec6c81bc464e648e6e684e31af955a424510ee4702e2cec8e3dbfa2d97859ed27e04ff45fe2e07cb0a548c87674337bb94f5352ce
-EBUILD cufflinks-1.3.0.ebuild 939 SHA256 258a7a6ff34e31b3b7d2f609661d73da405b402964078074d3e50b0459317b07 SHA512 5efbb88f99ae58bec80f7dbb9783582ff55076932221df02df30ab87368298f97abcdfe30adf8b293b0e751fd249d76ff673163f3b58cf02571283903b6d2219 WHIRLPOOL aa3caad2a764143ebd35a7105e03d5087c7bd16f6bf5a7873b47ade5a2ddbbe9bd75542502a32d5b6c83c32518f2b2d9e38c026490690e3dcccc2ec51b896197
-MISC ChangeLog 1027 SHA256 0e2ba40c7cfb482103068115e1d206bf476bd5aca60bde39470c60a0023079f9 SHA512 bb96d4cba91f42ca448b4a74cc7b5753fd77ed14a28e36acbf74f819e67aab0958338fc51a07b8b88b7e4c7bb0095cfdde2d8256b0de0d7ac952cd1bf5abe4b6 WHIRLPOOL 798e83837a1c57fe163f6dba373db80feee3deca2cd96407194d2068f6a64712b612b4048d1c7a29d8d5c0be0a78cf27e1da67624635915d5d7a548cb4f26d73
+EBUILD cufflinks-1.3.0-r1.ebuild 957 SHA256 9d5f642506fb3783081852b1ccefb3524f6dcfdaded577ca4c1b771033c71a8d SHA512 caf6cd751e25d490d86fcdb05e54596554ed76ad4c6c7acd4ff86ee3a179b25005159f0bcaa75104c8febbd22820a56039674e1b245a43538a0c66b378faf1d0 WHIRLPOOL 3668b9c1301ade0945c6ea5ad655890bd4d8be52bc357b0b84bfc640f8dd129370c74ecf4359dfcd556308ee73858a1b688a65c075339ccf90ada132b754481f
+MISC ChangeLog 1344 SHA256 f942c2ebd9b618c4b69f7635665fbd8f1c630abcf1293249e747f585194a158a SHA512 acf3dd422f1cddb8593c1572288dd79fc4e46ff0c34f1a46d339d63dcea822a496ca97ef920aaaec92a3f59acc4f9da3de3e8c1057f18695e05e8bb6c9b8e9db WHIRLPOOL 0532c002d2d01b5d45e026e1c931693fbfdaf9575d15eb8d5a4edea08e3705de5d76ce4a762d2a5b71b455da0386d631bf5fa02d3bfdebe0c70a983f16d27d33
 MISC metadata.xml 166 SHA256 29b228f683c71345323d841414e410c929a320f34536eb30910498728260c8ac SHA512 51c5345bb1c4466b73e2feac8895c64fc119365e7f2c156702f4c93664d3aba028b3da9daaabf24f61a88220345fca7806771a252e8ae906cac5dec97862c7e0 WHIRLPOOL 211bf955d94fc1d93b12388a2c597a8d440fb5d78f84d59b2549569537098c3525b1fbab707441d62fabe20edcac2fd9ebe09c5d9870f1c9558d7ee90d5db5b3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlE98Y0ACgkQgAnW8HDreRYPEwCdFewtxK54XLd7jk+fJa8Y4Riu
-LnkAoIIulMoiaDVf50ti/wOSKt/Z6x8Q
-=v0ec
+iQEcBAEBCAAGBQJS8fNQAAoJECo/aRed9267P6QIAI8UwotCR7jVSde7wAF1evwU
+aU3cUP4fO6hUKhs0gRAXgWN4PvuGde5U0Gg82kKyc7c6h630Pm5O1gyexJkkMSod
+p/fUQ30sNpCqs7PUsdGyCsIoZTtqBoz84S3+Cd8D5HzoUeacd0IA4MdI9OAu/DmD
+OgHPXcN/nydWA0pjQiE5HvzEhBeEG2xU5FtFal4wtuNC1e7qQmwSoaZ0RuXTTZnl
+3MLWQE3J+aE++p3q7a+BHatNS4I1enZqRqONQ0Xo7rsTAYvxD5otqVyK5lGXd3KU
+CzKOzRQb1IOpAiAJse587yJvnRzYhp9QtGdSXtD6YniEjQ2mQrjP0Mn6slT6+WY=
+=VOCF
 -----END PGP SIGNATURE-----
