@@ -1,8 +1,8 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/cufflinks/cufflinks-1.3.0.ebuild,v 1.3 2012/11/10 10:58:55 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/cufflinks/cufflinks-1.3.0-r1.ebuild,v 1.1 2014/02/05 08:16:11 pinkbyte Exp $
 
-EAPI=4
+EAPI=5
 
 AUTOTOOLS_AUTORECONF=yes
 
@@ -18,8 +18,8 @@ IUSE="debug"
 KEYWORDS="~amd64 ~x86"
 
 DEPEND="
-	sci-biology/samtools
-	dev-libs/boost"
+	>=sci-biology/samtools-0.1.18
+	dev-libs/boost:="
 RDEPEND="${DEPEND}"
 
 PATCHES=(
