@@ -1,8 +1,3 @@
- configure.ac | 7 ++++---
- 1 file changed, 4 insertions(+), 3 deletions(-)
-
-diff --git a/configure.ac b/configure.ac
-index b8a0b9b..b0a4635 100755
 --- a/configure.ac
 +++ b/configure.ac
 @@ -27,6 +27,7 @@ AC_PROG_AWK
@@ -22,7 +17,7 @@ index b8a0b9b..b0a4635 100755
  ext_CFLAGS=""
  debug_CFLAGS=""
  #echo "${host_cpu}-${host_os}"
-@@ -99,9 +100,9 @@ AC_ARG_ENABLE(profiling,      [  --enable-profiling        enable profiling with
+@@ -99,15 +100,15 @@ AC_ARG_ENABLE(profiling,      [  --enable-profiling        enable profiling with
  	  [ext_LDFLAGS="-lprofiler -ltcmalloc"], [])
  	  
  CFLAGS="${generic_CFLAGS} ${ext_CFLAGS} ${user_CFLAGS} ${debug_CFLAGS} ${OPENMP_CFLAGS}"
@@ -34,3 +29,10 @@ index b8a0b9b..b0a4635 100755
  
  # Checks for structures/functions that can be used to determine system memory
  AC_CHECK_MEMBERS([struct sysinfo.totalram], [], [], [#include <sys/sysinfo.h>])
+ AC_CHECK_DECLS([sysctl, CTL_HW, HW_PHYSMEM], [], [], [#include <sys/sysctl.h>])
+ 
+-AM_INIT_AUTOMAKE([-Wall -Werror tar-pax foreign])
++AM_INIT_AUTOMAKE([-Wall tar-pax foreign subdir-objects])
+ 
+ AC_CONFIG_FILES([Makefile				 
+ 				 src/Makefile])
