@@ -1,6 +1,13 @@
 # ChangeLog for sci-biology/cufflinks
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/cufflinks/ChangeLog,v 1.5 2013/03/11 15:00:28 jlec Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/cufflinks/ChangeLog,v 1.6 2014/02/05 08:16:11 pinkbyte Exp $
+
+*cufflinks-1.3.0-r1 (05 Feb 2014)
+
+  05 Feb 2014; Sergey Popov <pinkbyte@gentoo.org> -cufflinks-1.3.0.ebuild,
+  +cufflinks-1.3.0-r1.ebuild, files/cufflinks-1.3.0-autotools.patch:
+  Revision bump: EAPI 5, add subslot to Boost dependency, fix compatibility
+  with Automake 1.14, wrt bug #499046. Drop old revision
 
   11 Mar 2013; Justin Lecher <jlec@gentoo.org> metadata.xml:
   Drop Andrey as maintainer so that bugs get assigned to sci-biology directly
